--- a/pom.xml
+++ b/pom.xml
@@ -115,7 +115,17 @@
 </plugin>
 		</plugins>
 	</build>
-
+	
+<distributionManagement>
+        <repository>
+            <id>maven-releases</id>
+            <url>http://34.205.65.61:8081/repository/maven-releases/</url>
+        </repository>
+        <snapshotRepository>
+            <id>maven-snapshots</id>
+            <url>http://34.205.65.61:8081/repository/maven-snapshots/</url>
+        </snapshotRepository>
+    </distributionManagement>
 	
 
 </project>
